--- a/ministere.html
+++ b/ministere.html
@@ -438,38 +438,163 @@
         </div>
       </div>
     </div>
-    <!-- <div class="parent">
-      <div class="child8"></div>
+
+    <div class="parent">
       <div class="child2">
-        <h2>La chambre haute</h2>
+        <h2>Brigade de Prières</h2>
         <p>
-          Nous sommes guidés par la conviction profonde que chaque individu
-          mérite une chance de rédemption et de réintégration réussie dans la
-          société. Notre mission est simple : apporter de l'espoir, du réconfort
-          et du soutien aux personnes incarcérées. Nous réalisons cette mission
-          grâce à la visite régulière de nos bénévoles dévoués, qui offrent un
-          soutien moral, écoutent les préoccupations et renforcent les liens
-          humains. Nous croyons en la réhabilitation plutôt qu'en la punition,
-          et travaillons en étroite collaboration avec les autorités
-          pénitentiaires et d'autres organisations pour faciliter la réinsertion
-          des détenus dans la société. Nous organisons également des programmes
-          d'information et des campagnes pour sensibiliser le public aux enjeux
-          liés à la réhabilitation.
+          Le programme de prière "Brigade de la Rédemption" est une initiative
+          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
+          la santé et d'autres bénédictions divines. Fondé sur la foi
+          chrétienne, ce programme offre un espace de prière et d'intercession
+          pour les besoins spirituels et matériels de chacun. Les participants
+          peuvent se joindre à des séances de prière collectives visant à
+          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
+          Que ce soit pour trouver la guérison, la prospérité ou la paix
+          intérieure, la "Brigade de la Rédemption" offre un lieu de
+          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
         </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
-          target="_blank"
           href="https://www.facebook.com/Samuel.DALUM"
         >
-          Nous suivre sur Facebook
+          Suivez-nous sur Facebook
           <div
             class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
           >
             <i class="fa fa-arrow-right"></i>
           </div>
         </a>
+
+        <br />
+
+        <div class="prayer-info-container">
+          <div class="prayer-info">
+            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
+            <h2>Mardi</h2>
+            <p><strong>Heure :</strong> 12h30 - 15h00</p>
+          </div>
+        </div>
       </div>
-    </div> -->
+      <div class="child8"></div>
+    </div>
+    <div class="parent">
+      <div class="child2">
+        <h2>Brigade de Prières</h2>
+        <p>
+          Le programme de prière "Brigade de la Rédemption" est une initiative
+          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
+          la santé et d'autres bénédictions divines. Fondé sur la foi
+          chrétienne, ce programme offre un espace de prière et d'intercession
+          pour les besoins spirituels et matériels de chacun. Les participants
+          peuvent se joindre à des séances de prière collectives visant à
+          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
+          Que ce soit pour trouver la guérison, la prospérité ou la paix
+          intérieure, la "Brigade de la Rédemption" offre un lieu de
+          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
+        </p>
+        <a
+          class="btn btn-outline-primary py-2 px-3"
+          href="https://www.facebook.com/Samuel.DALUM"
+        >
+          Suivez-nous sur Facebook
+          <div
+            class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+          >
+            <i class="fa fa-arrow-right"></i>
+          </div>
+        </a>
+
+        <br />
+
+        <div class="prayer-info-container">
+          <div class="prayer-info">
+            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
+            <h2>Mardi</h2>
+            <p><strong>Heure :</strong> 12h30 - 15h00</p>
+          </div>
+        </div>
+      </div>
+      <div class="child10"></div>
+    </div>
+    <div class="parent">
+      <div class="child11"></div>
+      <div class="child2">
+        <h2>Brigade de Prières</h2>
+        <p>
+          Le programme de prière "Brigade de la Rédemption" est une initiative
+          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
+          la santé et d'autres bénédictions divines. Fondé sur la foi
+          chrétienne, ce programme offre un espace de prière et d'intercession
+          pour les besoins spirituels et matériels de chacun. Les participants
+          peuvent se joindre à des séances de prière collectives visant à
+          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
+          Que ce soit pour trouver la guérison, la prospérité ou la paix
+          intérieure, la "Brigade de la Rédemption" offre un lieu de
+          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
+        </p>
+        <a
+          class="btn btn-outline-primary py-2 px-3"
+          href="https://www.facebook.com/Samuel.DALUM"
+        >
+          Suivez-nous sur Facebook
+          <div
+            class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+          >
+            <i class="fa fa-arrow-right"></i>
+          </div>
+        </a>
+
+        <br />
+
+        <div class="prayer-info-container">
+          <div class="prayer-info">
+            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
+            <h2>Mardi</h2>
+            <p><strong>Heure :</strong> 12h30 - 15h00</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="parent">
+      <div class="child12"></div>
+      <div class="child2">
+        <h2>Brigade de Prières</h2>
+        <p>
+          Le programme de prière "Brigade de la Rédemption" est une initiative
+          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
+          la santé et d'autres bénédictions divines. Fondé sur la foi
+          chrétienne, ce programme offre un espace de prière et d'intercession
+          pour les besoins spirituels et matériels de chacun. Les participants
+          peuvent se joindre à des séances de prière collectives visant à
+          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
+          Que ce soit pour trouver la guérison, la prospérité ou la paix
+          intérieure, la "Brigade de la Rédemption" offre un lieu de
+          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
+        </p>
+        <a
+          class="btn btn-outline-primary py-2 px-3"
+          href="https://www.facebook.com/Samuel.DALUM"
+        >
+          Suivez-nous sur Facebook
+          <div
+            class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+          >
+            <i class="fa fa-arrow-right"></i>
+          </div>
+        </a>
+
+        <br />
+
+        <div class="prayer-info-container">
+          <div class="prayer-info">
+            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
+            <h2>Mardi</h2>
+            <p><strong>Heure :</strong> 12h30 - 15h00</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="containers">
       <div class="boxs box1s">
