--- a/ministere.html
+++ b/ministere.html
@@ -408,6 +408,7 @@
         <a
           class="btn btn-outline-primary py-2 px-3"
           href="https://www.facebook.com/Samuel.DALUM"
+          target="_blank"
         >
           Suivez-nous sur Facebook
           <div
@@ -415,6 +416,18 @@
           >
             <i class="fa fa-arrow-right"></i>
           </div>
+        </a>
+        <br />
+        <h6>
+          Suivez la Brigade de Prières sur Maranata touts les lundis a patrtir
+          de 22h30
+        </h6>
+        <a
+          class="btn btn-outline-primary py-2 px-3"
+          href="https://radioenlignefrance.com/maranatha"
+          target="_blank"
+        >
+          <img src="./img/Radio.webp" width="50" height="50" alt="" />
         </a>
 
         <br />
@@ -428,12 +441,12 @@
           <div class="prayer-info">
             <i class=""><img src="./img/prayer-icon2.png" alt="" /></i>
             <h2>Vendredi</h2>
-            <p><strong>Heure :</strong> 19h00 - 22h30</p>
+            <p><strong>Heure :</strong> 19h00 - 22h00</p>
           </div>
           <div class="prayer-info">
             <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
             <h2>Dimanche</h2>
-            <p><strong>Heure :</strong> 16h30 - 20h30</p>
+            <p><strong>Heure :</strong> 16h00 - 20h00</p>
           </div>
         </div>
       </div>
@@ -441,7 +454,7 @@
 
     <div class="parent">
       <div class="child2">
-        <h2>Brigade de Prières</h2>
+        <h2>CHAMBRE HAUTE</h2>
         <p>
           Le programme de prière "Brigade de la Rédemption" est une initiative
           chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
@@ -471,7 +484,7 @@
         <div class="prayer-info-container">
           <div class="prayer-info">
             <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
-            <h2>Mardi</h2>
+            <h2>Mardi Férié</h2>
             <p><strong>Heure :</strong> 12h30 - 15h00</p>
           </div>
         </div>
@@ -479,8 +492,9 @@
       <div class="child8"></div>
     </div>
     <div class="parent">
+      <div class="child10"></div>
       <div class="child2">
-        <h2>Brigade de Prières</h2>
+        <h2>FEMME DE GRACE</h2>
         <p>
           Le programme de prière "Brigade de la Rédemption" est une initiative
           chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
@@ -504,23 +518,11 @@
             <i class="fa fa-arrow-right"></i>
           </div>
         </a>
-
-        <br />
-
-        <div class="prayer-info-container">
-          <div class="prayer-info">
-            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
-            <h2>Mardi</h2>
-            <p><strong>Heure :</strong> 12h30 - 15h00</p>
-          </div>
-        </div>
       </div>
-      <div class="child10"></div>
     </div>
     <div class="parent">
-      <div class="child11"></div>
       <div class="child2">
-        <h2>Brigade de Prières</h2>
+        <h2>LE JEUNE DES JEUNES</h2>
         <p>
           Le programme de prière "Brigade de la Rédemption" est une initiative
           chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
@@ -546,20 +548,13 @@
         </a>
 
         <br />
-
-        <div class="prayer-info-container">
-          <div class="prayer-info">
-            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
-            <h2>Mardi</h2>
-            <p><strong>Heure :</strong> 12h30 - 15h00</p>
-          </div>
-        </div>
       </div>
+      <div class="child11"></div>
     </div>
     <div class="parent">
       <div class="child12"></div>
       <div class="child2">
-        <h2>Brigade de Prières</h2>
+        <h2>WORSHIP MOOD</h2>
         <p>
           Le programme de prière "Brigade de la Rédemption" est une initiative
           chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
@@ -589,11 +584,42 @@
         <div class="prayer-info-container">
           <div class="prayer-info">
             <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
-            <h2>Mardi</h2>
+            <h2>Dimanche</h2>
             <p><strong>Heure :</strong> 12h30 - 15h00</p>
           </div>
         </div>
       </div>
+    </div>
+    <div class="parent">
+      <div class="child2">
+        <h2>LE COCKTAIL DES JEUNES</h2>
+        <p>
+          Le programme de prière "Brigade de la Rédemption" est une initiative
+          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
+          la santé et d'autres bénédictions divines. Fondé sur la foi
+          chrétienne, ce programme offre un espace de prière et d'intercession
+          pour les besoins spirituels et matériels de chacun. Les participants
+          peuvent se joindre à des séances de prière collectives visant à
+          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
+          Que ce soit pour trouver la guérison, la prospérité ou la paix
+          intérieure, la "Brigade de la Rédemption" offre un lieu de
+          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
+        </p>
+        <a
+          class="btn btn-outline-primary py-2 px-3"
+          href="https://www.facebook.com/Samuel.DALUM"
+        >
+          Suivez-nous sur Facebook
+          <div
+            class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+          >
+            <i class="fa fa-arrow-right"></i>
+          </div>
+        </a>
+
+        <br />
+      </div>
+      <div class="child13"></div>
     </div>
 
     <div class="containers">
