--- a/fanfare.html
+++ b/fanfare.html
@@ -51,6 +51,74 @@
 
       gtag("config", "G-FSM4EQJ2E1");
     </script>
+    <style>
+      .video-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 400px; /* Ajustez la hauteur comme nécessaire */
+      }
+
+      /* Style pour l'iframe vidéo */
+      iframe {
+        width: 80%; /* Ajustez la largeur comme nécessaire */
+        height: 350px; /* Ajustez la hauteur comme nécessaire */
+      }
+
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #f5f5f5;
+      }
+
+      header {
+        background-color: #f1e3c7;
+        color: white;
+        text-align: center;
+        padding: 20px;
+      }
+      .headerTwo {
+        background-color: rgb(255, 169, 0);
+        color: white;
+        text-align: center;
+        padding: 20px;
+      }
+
+      h1 {
+        margin: 0;
+      }
+
+      .prayer-info-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        margin: 20px;
+      }
+
+      .prayer-info {
+        background-color: white;
+        border-radius: 5px;
+        padding: 20px;
+        text-align: center;
+      }
+
+      .prayer-info h2 {
+        color: #333;
+      }
+
+      .prayer-info i {
+        font-size: 48px;
+        margin-bottom: 10px;
+      }
+      @media (max-width: 767px) {
+        .prayer-info-container {
+          grid-template-columns: 1fr; /* Afficher en colonne */
+          text-align: center;
+        }
+      }
+    </style>
   </head>
   <body>
     <!-- Spinner Start -->
@@ -271,7 +339,90 @@
         </a>
       </div>
     </div>
-    <div class="containers">
+    <header>
+      <h1>Plus de 20 instruments</h1>
+    </header>
+    <div class="prayer-info-container">
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/violon.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Violon</h2>
+        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/violon.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Violon</h2>
+        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/violon.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Violon</h2>
+        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/violon.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Violon</h2>
+        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/violon.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Violon</h2>
+        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/violon.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Violon</h2>
+        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/violon.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Violon</h2>
+        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+      </div>
+      <div class="prayer-info">
+        <i class="fas fa-praying-hands"></i>
+        <h2>Vendredi</h2>
+        <p><strong>Heure :</strong> 19h00 - 22h30</p>
+      </div>
+      <div class="prayer-info">
+        <i class="fas fa-praying-hands"></i>
+        <h2>Dimanche</h2>
+        <p><strong>Heure :</strong> 17h30 - 20h00</p>
+      </div>
+    </div>
+    <div class="headerTwo">
+      <h1>Suivez notre dernière prestation</h1>
+    </div>
+    <div class="video-container">
+      <!-- Remplacez ceci par le code d'intégration de votre vidéo YouTube -->
+      <iframe
+        width="560"
+        height="335"
+        src="https://www.youtube.com/embed/JQLWKEEY81c"
+        frameborder="0"
+        allowfullscreen
+        post
+      ></iframe>
+    </div>
+    <p style="">
+      Fusce ac felis sit amet ligula pharetra condimentum. Mauris turpis nunc,
+      blandit et, volutpat molestie, porta ut, ligula. Suspendisse eu ligula.
+      Praesent nec nisl a purus blandit viverra.
+    </p>
+    <!-- <div class="containers">
       <div class="boxs box1s">
         <div class="icons">
           <span class="icon">&#128161;</span>
@@ -332,7 +483,7 @@
           <a href="newsletter.html#subscribe">M’ABONNER À LA NEWSLETTER</a>
         </button>
       </div>
-    </div>
+    </div> -->
 
     <!-- Footer Start -->
     <div
