--- a/ministere.html
+++ b/ministere.html
@@ -427,24 +427,30 @@
           href="https://radioenlignefrance.com/maranatha"
           target="_blank"
         >
-          <img src="./img/Radio.webp" width="50" height="50" alt="" />
+          <img src="./img/Radio.webp" width="80" height="80" alt="" />
         </a>
 
         <br />
 
         <div class="prayer-info-container">
           <div class="prayer-info">
-            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
+            <i class=""
+              ><img src="./img/church.png" width="80" height="80" alt=""
+            /></i>
             <h2>Mardi</h2>
             <p><strong>Heure :</strong> 12h30 - 15h00</p>
           </div>
           <div class="prayer-info">
-            <i class=""><img src="./img/prayer-icon2.png" alt="" /></i>
+            <i class=""
+              ><img src="./img/prayer-icon2.png" width="80" height="80" alt=""
+            /></i>
             <h2>Vendredi</h2>
             <p><strong>Heure :</strong> 19h00 - 22h00</p>
           </div>
           <div class="prayer-info">
-            <i class=""><img src="./img/prayer-icon3.png" alt="" /></i>
+            <i class=""
+              ><img src="./img/prayer-icon3.png" width="80" height="80" alt=""
+            /></i>
             <h2>Dimanche</h2>
             <p><strong>Heure :</strong> 16h00 - 20h00</p>
           </div>
