--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/about.css" rel="stylesheet" />
     <!-- Google tag (gtag.js) -->
     <script src="https://cdn.fedapay.com/checkout.js?v=1.1.7"></script>
     <script
@@ -52,32 +53,7 @@
 
       gtag("config", "G-FSM4EQJ2E1");
     </script>
-    <style>main {
-      padding: 20px;
-    }
-.mainOne{
-  background-color:#F1E3C7;
-        color: white;
-        text-align: center;
-        padding: 20px;
-}
-    section {
-      background-color: white;
-      border-radius: 5px;
-      padding: 20px;
-      margin-bottom: 20px;
-    }
-
-    h2 {
-      color: #333;
-      text-align: left;
-    }
-    p {
-      color: #333;
-      text-align: left;
-    }
-    
-    </style>
+  
   </head>
   <body>
     <!-- Spinner Start -->
@@ -283,7 +259,32 @@
       </div>
     </div>
     <!-- Service End -->
-   <!-- <img src="./img/objectif.png"  alt="" style="object-fit: contain;width: 100vw;height: 320px;" > -->
+ 
+    <div class="background-div">
+      <h3  class="display-4 text-black mb-3 animated slideInDown">
+Objectifs
+      </h3>
+      <span class="span-about"></span>
+      <h4>Assister les personnes vulnérables</h4>
+      <span class="span-about"></span>
+      <h4>Contribuer à l'éducation de base et à la formation professionnelle des jeunes</h4>
+      <span class="span-about"></span>
+      <h4>Participer à la conservation et à la préservation de l'environnement et des ressources naturelles</h4>
+      <span class="span-about"></span>
+      <h4>Promouvoir et valoriser la culture béninoise</h4>
+      <span class="span-about"></span>
+      <h4>Défendre et vulgariser les droits des hommes</h4>
+   
+      <p class="president-name">Samuel Dalum</p>
+      <p class="president">Président de la fondation</p>
+      <img
+      class="image_objectif"
+        src="./img/dalum1.jpg"
+        width="140"
+        height="140"
+        alt=""
+      />
+    </div>
  <div class="mainOne">  <main>
   <section id="objectif">
     <h2>Objectif</h2>
@@ -305,68 +306,41 @@
 
   <button  class="mui-button secondary" style="text-align: center;"><a href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
 </p>
-    <div class="containers">
-      <div class="boxs box1s">
-        <div class="icons">
-          <span class="icon">&#128161;</span>
-          <button class="mui-button success">
-            <a href="newsletter.html">The daily mediation</a>
-          </button>
-        </div>
-        <h2>Recevoir une méditation tous les jours</h2>
-        <button
-          style="
-            margin: 5px;
-            padding: 10px 20px;
-            background-color: transparent;
-            color: #fff;
-            border: 1px solid white;
-            cursor: pointer;
-          "
-        >
-          <a href="newsletter.html#subscribe">JE MABONNE</a>
-        </button>
-      </div>
-      <div class="boxs box2s">
-        <button
-          style="
-            padding: 10px 20px;
-            margin: 5px;
-            background-color: transparent;
+<div class="containers">
+  <div class="boxs box1s">
+    <div class="icons">
 
-            border: 1px solid white;
-            cursor: pointer;
-          "
-        >
-          <a href="contact.html">NOUS ÉCRIRE UN EMAIL</a>
-        </button>
-        <button
-          style="
-            margin: 5px;
-            padding: 10px 20px;
-            background-color: transparent;
-
-            color: #fff;
-            border: 1px solid white;
-            cursor: pointer;
-          "
-        >
-          <a href="prayer.html">DEMANDER LA PRIÈRE</a>
-        </button>
-        <button
-          style="
-            margin: 5px;
-            padding: 10px 20px;
-            background-color: transparent;
-            color: #fff;
-            border: 1px solid white;
-            cursor: pointer;
-          "
-        >
-          <a href="newsletter.html#subscribe">M’ABONNER À LA NEWSLETTER</a>
-        </button>
-      </div>
+      <span class="icon">&#128161;</span>
+      <button class="mui-button success"><a href="newsletter.html">The daily mediation</a></button>
     </div>
+    <h2 style="color: white;">Recevoir une méditation tous les jours</h2>
+    <button style=" margin: 5px;  padding: 10px 20px;
+    background-color: transparent; 
+    color: #fff;
+    border: 1px solid white;;
+    cursor: pointer;"><a href="newsletter.html#subscribe">JE MABONNE</a></button>
+  </div>
+  <div class="boxs box2s">
+
+    <button style=" margin: 5px;  padding: 10px 20px;
+    background-color: transparent; 
+    color: #fff;
+    border: 1px solid white;;
+    cursor: pointer;"><a href="newsletter.html#subscribe">MON TÉMOIGNAGE</a></button>
+    
+    <button style="   padding: 10px 20px;margin: 5px;
+    background-color: transparent; 
+   
+    border: 1px solid white;
+    cursor: pointer;"><a href="contact.html">NOUS ÉCRIRE UN EMAIL</a></button>    <button style=" margin: 5px;  padding: 10px 20px;
+  background-color: transparent; 
+
+  color: #fff;
+  border: 1px solid white;
+  cursor: pointer;"><a href="prayer.html">DEMANDER LA PRIÈRE</a></button>   
+ 
+  </div>
+</div>
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
