--- a/about.html
+++ b/about.html
@@ -317,7 +317,7 @@ Objectifs
         <form id="donationForm">
           <div class="row g-3">
           
-            <h3>Don En Nature</h3>
+            <h1>Don En Nature</h1>
             <div id="footerText" style="text-align: center; margin-top: 20px;">
               <p style='text-align:justify'>Pour faire un don en nature au fondation, veuillez suivre ces étapes :</p>
               <ol>
@@ -329,9 +329,9 @@ Objectifs
               </ol>
               <p style='text-align:justify'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</p>
             </div>
-            <h3>Don En Espèce</h3>
+            <h1>Don En Espèce</h1>
             <div class="col-12">
-              <button class="mui-button secondary-button"><a href="https://me.fedapay.com/wP6ip9Oe" target="_blank">Faire un don</a></button>
+              <button style="color: #fff;" ><a href="https://me.fedapay.com/wP6ip9Oe" target="_blank">Faire un don</a></button>
               <!-- <button id="donateButton" class="btn btn-primary px-5" style="height: 60px">
                <a style="color: black; " target="_blank" href="https://me.fedapay.com/wP6ip9Oe">Faire un don</a>
                 <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
@@ -350,10 +350,7 @@ Objectifs
 <!-- Donate End -->
     </p>
  <div class="mainOne">  <main>
-  <section id="objectif">
-    <h2>Objectif</h2>
-    <p>Notre objectif est de...</p>
-  </section>
+
   <section id="vision">
     <h2>Vision</h2>
     <p>Vestibulum fringilla pede sit amet augue. Curabitur turpis.
