--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@ button {
                 <!-- <a href="service.html" class="dropdown-item"
                   >Nos différents services</a
                 > -->
-                <a href="donate.html" class="dropdown-item"
+                <a href="temoignage.html" class="dropdown-item"
                   >Découvrez des témoignages encourageants</a
                 >
-                <a href="contact.html#subscribeForm" class="dropdown-item"
+                <a href="form_temoignage.html" class="dropdown-item"
                   >Partagez-nous votre témoignage.</a
                 >
       
