--- a/ministere.html
+++ b/ministere.html
@@ -438,21 +438,30 @@
               ><img src="./img/church.png" width="80" height="80" alt=""
             /></i>
             <h2>Mardi</h2>
-            <p><strong>Heure :</strong> 12h30 - 15h00</p>
+            <p>
+              <strong><img src="./img/sun.webp" alt="" /></strong>
+              12h30 - 15h00
+            </p>
           </div>
           <div class="prayer-info">
             <i class=""
               ><img src="./img/prayer-icon2.png" width="80" height="80" alt=""
             /></i>
             <h2>Vendredi</h2>
-            <p><strong>Heure :</strong> 19h00 - 22h00</p>
+            <p>
+              <strong><img src="./img/lune.webp" alt="" /></strong> 19h00 -
+              22h00
+            </p>
           </div>
           <div class="prayer-info">
             <i class=""
               ><img src="./img/prayer-icon3.png" width="80" height="80" alt=""
             /></i>
             <h2>Dimanche</h2>
-            <p><strong>Heure :</strong> 16h00 - 20h00</p>
+            <p>
+              <strong><img src="./img/sun-midi.webp" alt="" /></strong> 16h00 -
+              20h00
+            </p>
           </div>
         </div>
       </div>
