--- a/fanfare.html
+++ b/fanfare.html
@@ -129,6 +129,7 @@
       <div class="spinner-grow text-primary" role="status"></div>
     </div>
     <!-- Spinner End -->
+
     <!-- Navbar Start -->
     <div
       class="container-fluid fixed-top px-0 wow fadeIn"
@@ -160,7 +161,7 @@
             href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
             target="_blank"
             ><i aria-colcount="fab"
-              ><img src="img/tik-tok.png" alt="tiktok" /></i
+              ><img src="img/tik-tok.png" alt="tiktok png" /></i
           ></a>
           <a
             class="text-white-50 ms-3"
@@ -210,13 +211,36 @@
               >
               <div class="dropdown-menu m-0">
                 <!-- <a href="service.html" class="dropdown-item"
-          >Nos différents services</a
-        > -->
+                 >Nos différents services</a
+               > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
                 <a href="contact.html#subscribeForm" class="dropdown-item"
                   >Devenir partenaire</a
+                >
+
+                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
+                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
+                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
+              </div>
+            </div>
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Témoignages</a
+              >
+              <div class="dropdown-menu m-0">
+                <!-- <a href="service.html" class="dropdown-item"
+                 >Nos différents services</a
+               > -->
+                <a href="temoignage.html" class="dropdown-item"
+                  >Découvrez des témoignages encourageants</a
+                >
+                <a href="form_temoignage.html" class="dropdown-item"
+                  >Partagez-nous votre témoignage.</a
                 >
 
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
@@ -233,13 +257,13 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item"
-                  >Le centre de prière</a
-                >
+                  >Centre La Grâce Parle
+                </a>
                 <a href="fanfare.html" class="dropdown-item active"
                   >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
-                  >Aide Humanitaire et Education</a
+                  >Hand Of Hope</a
                 >
               </div>
             </div>
@@ -255,9 +279,7 @@
                 <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
-                <a href="newsletter.html" class="dropdown-item"
-                  >Abonnement a la newsletter</a
-                >
+                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
                 <a href="prayer.html" class="dropdown-item"
                   >Demander une prière</a
                 >
@@ -265,16 +287,16 @@
               </div>
             </div>
           </div>
-          <div class="d-none d-lg-flex ms-2">
-            <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
-              Faire un don
-              <div
-                class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
-              >
-                <i class="fa fa-arrow-right"></i>
-              </div>
-            </a>
-          </div>
+          <!-- <div class="d-none d-lg-flex ms-2">
+           <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
+             Faire un don
+             <div
+               class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+             >
+               <i class="fa fa-arrow-right"></i>
+             </div>
+           </a>
+         </div> -->
         </div>
       </nav>
     </div>
@@ -314,20 +336,17 @@
     <div class="parent">
       <div class="child9"></div>
       <div class="child2">
-        <h2>Notre Mission : Changer des Vies, un Acte de Bonté à la Fois</h2>
+        <h2>Philharmonie La Grâce Parle</h2>
         <p>
-          Nous sommes guidés par la conviction profonde que chaque individu
-          mérite une chance de rédemption et de réintégration réussie dans la
-          société. Notre mission est simple : apporter de l'espoir, du réconfort
-          et du soutien aux personnes incarcérées. Nous réalisons cette mission
-          grâce à la visite régulière de nos bénévoles dévoués, qui offrent un
-          soutien moral, écoutent les préoccupations et renforcent les liens
-          humains. Nous croyons en la réhabilitation plutôt qu'en la punition,
-          et travaillons en étroite collaboration avec les autorités
-          pénitentiaires et d'autres organisations pour faciliter la réinsertion
-          des détenus dans la société. Nous organisons également des programmes
-          d'information et des campagnes pour sensibiliser le public aux enjeux
-          liés à la réhabilitation.
+          Notre branche de musique Philharmonie La Grâce Parle offre une variété
+          de services pour répondre aux besoins de nos communautés. Nous
+          organisons des concerts en direct pour partager notre musique et notre
+          message de foi. Nous proposons également des ateliers de musique pour
+          aider les gens à développer leurs compétences et leur passion pour la
+          musique. Enfin, nous sommes fiers de collaborer avec d'autres artistes
+          pour créer des projets musicaux uniques et inspirants. Chez nous, la
+          musique est plus qu'un simple divertissement, c'est une expérience de
+          foi et de communauté.
         </p>
         <a class="btn btn-outline-primary py-2 px-3" href="">
           Visiter le site web
