--- a/form_temoignage.html
+++ b/form_temoignage.html
@@ -162,7 +162,7 @@
             href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
             target="_blank"
             ><i aria-colcount="fab"
-              ><img src="img/tik-tok.png" alt="tiktok" /></i
+              ><img src="img/tik-tok.png" alt="tiktok png" /></i
           ></a>
           <a
             class="text-white-50 ms-3"
@@ -212,13 +212,36 @@
               >
               <div class="dropdown-menu m-0">
                 <!-- <a href="service.html" class="dropdown-item"
-                >Nos différents services</a
-              > -->
+             >Nos différents services</a
+           > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
                 <a href="contact.html#subscribeForm" class="dropdown-item"
                   >Devenir partenaire</a
+                >
+
+                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
+                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
+                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
+              </div>
+            </div>
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle active"
+                data-bs-toggle="dropdown"
+                >Témoignages</a
+              >
+              <div class="dropdown-menu m-0">
+                <!-- <a href="service.html" class="dropdown-item"
+             >Nos différents services</a
+           > -->
+                <a href="temoignage.html" class="dropdown-item"
+                  >Découvrez des témoignages encourageants</a
+                >
+                <a href="form_temoignage.html" class="dropdown-item active"
+                  >Partagez-nous votre témoignage.</a
                 >
 
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
@@ -235,13 +258,13 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item"
-                  >Le centre de prière</a
-                >
+                  >Centre La Grâce Parle
+                </a>
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
-                  >Aide Humanitaire et Education</a
+                  >Hand Of Hope</a
                 >
               </div>
             </div>
@@ -249,17 +272,15 @@
             <div class="nav-item dropdown">
               <a
                 href="#"
-                class="nav-link dropdown-toggle active"
+                class="nav-link dropdown-toggle"
                 data-bs-toggle="dropdown"
                 >Contactez-nous</a
               >
               <div class="dropdown-menu m-0">
-                <a href="contact.html" class="dropdown-item active"
+                <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
-                <a href="newsletter.html" class="dropdown-item"
-                  >Abonnement a la newsletter</a
-                >
+                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
                 <a href="prayer.html" class="dropdown-item"
                   >Demander une prière</a
                 >
@@ -267,21 +288,20 @@
               </div>
             </div>
           </div>
-          <div class="d-none d-lg-flex ms-2">
-            <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
-              Faire un don
-              <div
-                class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
-              >
-                <i class="fa fa-arrow-right"></i>
-              </div>
-            </a>
-          </div>
+          <!-- <div class="d-none d-lg-flex ms-2">
+       <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
+         Faire un don
+         <div
+           class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+         >
+           <i class="fa fa-arrow-right"></i>
+         </div>
+       </a>
+     </div> -->
         </div>
       </nav>
     </div>
     <!-- Navbar End -->
-
     <!-- Page Header Start -->
     <div
       class="container-fluid page-header-contact mb-5 wow fadeIn"
@@ -349,7 +369,7 @@
                 <optgroup label="Afrique">
                   <option value="algerie">Algérie</option>
                   <option value="angola">Angola</option>
-                  <option value="benin">Bénin</option>
+                  <option value="benin" selected>Bénin</option>
                   <option value="botswana">Botswana</option>
                   <option value="burkina-faso">Burkina Faso</option>
                   <option value="burundi">Burundi</option>
@@ -597,7 +617,7 @@
     <script src="lib/parallax/parallax.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/contact.js"></script>
+    <script src="js/testimonial.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
