--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-FSM4EQJ2E1"
     ></script>
     <style>
+      body{
+        overflow-x: hidden;
+      }
  iframe {
         width: 100%;
         height: 300px;
@@ -431,7 +434,7 @@ button {
         </div>
       </nav>
     </div>
-    <!-- Navbar End -->
+    <!-- Navbar End --> 
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
@@ -594,7 +597,7 @@ BOUTIQUE
     <div class="child1"></div>
     <div class="child2">
       <h2>
-        Visite Émotionnelle à l'Orphelinat : Un Regard Profond sur les Besoins des Enfants</h2>
+        Visite Émotionnelle à l'Orphelinat</h2>
       <p>
         Nous avons une mission profonde : apporter de l'espoir, du soutien et des opportunités aux enfants qui ont perdu leurs parents. Nous croyons que chaque enfant mérite un avenir prometteur, et c'est pourquoi nous travaillons sans relâche pour réaliser cette vision. Nous nous engageons à visiter régulièrement les orphelins, à établir des liens affectueux et à leur offrir une éducation de qualité. Nous sommes déterminés à les préparer pour un avenir brillant, en les dotant des compétences et des ressources nécessaires pour réussir dans la vie.Rejoignez notre cause en tant que bénévole, en faisant un don ou en découvrant nos initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins, un acte de bonté à la fois.
       </p>
@@ -608,9 +611,9 @@ BOUTIQUE
   </div>
   <div class="parent">
     <div class="child2">
-      <h2>'Brigade de Prières' : Un Chemin Spirituel Vers la Sérénité</h2>
+      <h2>Brigade de Prières</h2>
       <p>
-        Le programme de prière "Brigade de la Rédemption" est une initiative chrétienne ouverte à tous ceux qui cherchent la guérison, le travail, la santé et d'autres bénédictions divines. Fondé sur la foi chrétienne, ce programme offre un espace de prière et d'intercession pour les besoins spirituels et matériels de chacun. Les participants peuvent se joindre à des séances de prière collectives visant à solliciter les bénédictions de Dieu dans divers aspects de leur vie. Que ce soit pour trouver la guérison, la prospérité ou la paix intérieure, la "Brigade de la Rédemption" offre un lieu de recueillement et d'espérance pour ceux qui cherchent la grâce divine.
+      La brigade de Prières est un programme qui se déroule au sein du centre La grâce parle les <strong> mardis, </strong> <strong>jeudi,</strong> <strong>vendredi</strong>. C'est un programme ou les personnes de toute communauté religieuse se rassemblent pour élever leur voix à Dieu pour une intervention divine de notre seigneur Jésus que ce soit pour la guérison, le travail, la santé et d'autres bénédictions divines. Fondé sur la foi chrétienne, ce programme offre un espace de prière et d'intercession pour les besoins spirituels et matériels de chacun. Les participants peuvent se joindre à des séances de prière collectives visant à solliciter les bénédictions de Dieu dans divers aspects de leur vie.
       </p>
       <a
         class="btn btn-outline-primary py-2 px-3"
@@ -648,7 +651,7 @@ BOUTIQUE
       background-color: transparent; 
       color: #fff;
       border: 1px solid white;;
-      cursor: pointer;"><a href="newsletter.html#subscribe">MON TÉMOIGNAGE</a></button>
+      cursor: pointer;"><a href="form_temoignage.html">MON TÉMOIGNAGE</a></button>
       
       <button style="   padding: 10px 20px;margin: 5px;
       background-color: transparent; 
@@ -668,7 +671,7 @@ BOUTIQUE
     <div class="child2">
       <h2>Philharmonie La Grâce Parle </h2>
       <p>
-        Notre groupe de musique Philharmonie chrétienne offre une variété de services pour répondre aux besoins de nos communautés. Nous organisons des concerts en direct pour partager notre musique et notre message de foi. Nous proposons également des ateliers de musique pour aider les gens à développer leurs compétences et leur passion pour la musique. En plus de cela, nous offrons des services de louange pour les églises et les groupes de prière. Enfin, nous sommes fiers de collaborer avec d'autres artistes pour créer des projets musicaux uniques et inspirants. Chez nous, la musique est plus qu'un simple divertissement, c'est une expérience de foi et de communauté..
+        Notre branche de musique Philharmonie La Grâce Parle offre une variété de services pour répondre aux besoins de nos communautés. Nous organisons des concerts en direct pour partager notre musique et notre message de foi. Nous proposons également des ateliers de musique pour aider les gens à développer leurs compétences et leur passion pour la musique. Enfin, nous sommes fiers de collaborer avec d'autres artistes pour créer des projets musicaux uniques et inspirants. Chez nous, la musique est plus qu'un simple divertissement, c'est une expérience de foi et de communauté.
       </p>
       <a class="btn btn-outline-primary py-2 px-3" href="">
         Visiter le site web
