--- a/ministere.html
+++ b/ministere.html
@@ -193,7 +193,7 @@
             href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
             target="_blank"
             ><i aria-colcount="fab"
-              ><img src="img/tik-tok.png" alt="tiktok" /></i
+              ><img src="img/tik-tok.png" alt="tiktok png" /></i
           ></a>
           <a
             class="text-white-50 ms-3"
@@ -243,13 +243,36 @@
               >
               <div class="dropdown-menu m-0">
                 <!-- <a href="service.html" class="dropdown-item"
-          >Nos différents services</a
-        > -->
+                  >Nos différents services</a
+                > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
                 <a href="contact.html#subscribeForm" class="dropdown-item"
                   >Devenir partenaire</a
+                >
+
+                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
+                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
+                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
+              </div>
+            </div>
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Témoignages</a
+              >
+              <div class="dropdown-menu m-0">
+                <!-- <a href="service.html" class="dropdown-item"
+                  >Nos différents services</a
+                > -->
+                <a href="temoignage.html" class="dropdown-item"
+                  >Découvrez des témoignages encourageants</a
+                >
+                <a href="form_temoignage.html" class="dropdown-item"
+                  >Partagez-nous votre témoignage.</a
                 >
 
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
@@ -266,13 +289,13 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item active"
-                  >Le centre de prière</a
-                >
+                  >Centre La Grâce Parle
+                </a>
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
-                  >Aide Humanitaire et Education</a
+                  >Hand Of Hope</a
                 >
               </div>
             </div>
@@ -288,9 +311,7 @@
                 <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
-                <a href="newsletter.html" class="dropdown-item"
-                  >Abonnement a la newsletter</a
-                >
+                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
                 <a href="prayer.html" class="dropdown-item"
                   >Demander une prière</a
                 >
@@ -298,7 +319,7 @@
               </div>
             </div>
           </div>
-          <div class="d-none d-lg-flex ms-2">
+          <!-- <div class="d-none d-lg-flex ms-2">
             <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
               Faire un don
               <div
@@ -307,7 +328,7 @@
                 <i class="fa fa-arrow-right"></i>
               </div>
             </a>
-          </div>
+          </div> -->
         </div>
       </nav>
     </div>
@@ -394,16 +415,17 @@
       <div class="child2">
         <h2>Brigade de Prières</h2>
         <p>
-          Le programme de prière "Brigade de la Rédemption" est une initiative
-          chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
-          la santé et d'autres bénédictions divines. Fondé sur la foi
-          chrétienne, ce programme offre un espace de prière et d'intercession
-          pour les besoins spirituels et matériels de chacun. Les participants
-          peuvent se joindre à des séances de prière collectives visant à
-          solliciter les bénédictions de Dieu dans divers aspects de leur vie.
-          Que ce soit pour trouver la guérison, la prospérité ou la paix
-          intérieure, la "Brigade de la Rédemption" offre un lieu de
-          recueillement et d'espérance pour ceux qui cherchent la grâce divine.
+          La brigade de Prières est un programme qui se déroule au sein du
+          centre les <strong> mardis, </strong> <strong>jeudi,</strong>
+          <strong>vendredi</strong>. C'est un programme ou les personnes de
+          toute communauté religieuse se rassemblent pour élever leur voix à
+          Dieu pour une intervention divine de notre seigneur Jésus que ce soit
+          pour la guérison, le travail, la santé et d'autres bénédictions
+          divines. Fondé sur la foi chrétienne, ce programme offre un espace de
+          prière et d'intercession pour les besoins spirituels et matériels de
+          chacun. Les participants peuvent se joindre à des séances de prière
+          collectives visant à solliciter les bénédictions de Dieu dans divers
+          aspects de leur vie.
         </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
