--- a/prayer.html
+++ b/prayer.html
@@ -164,7 +164,7 @@
             href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
             target="_blank"
             ><i aria-colcount="fab"
-              ><img src="img/tik-tok.png" alt="tiktok" /></i
+              ><img src="img/tik-tok.png" alt="tiktok png" /></i
           ></a>
           <a
             class="text-white-50 ms-3"
@@ -180,6 +180,7 @@
           ></a>
         </div>
       </div>
+
       <nav
         class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s"
@@ -213,8 +214,8 @@
               >
               <div class="dropdown-menu m-0">
                 <!-- <a href="service.html" class="dropdown-item"
-              >Nos différents services</a
-            > -->
+                >Nos différents services</a
+              > -->
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
@@ -232,17 +233,40 @@
                 href="#"
                 class="nav-link dropdown-toggle"
                 data-bs-toggle="dropdown"
+                >Témoignages</a
+              >
+              <div class="dropdown-menu m-0">
+                <!-- <a href="service.html" class="dropdown-item"
+                >Nos différents services</a
+              > -->
+                <a href="temoignage.html" class="dropdown-item"
+                  >Découvrez des témoignages encourageants</a
+                >
+                <a href="form_temoignage.html" class="dropdown-item"
+                  >Partagez-nous votre témoignage.</a
+                >
+
+                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
+                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
+                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
+              </div>
+            </div>
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
                 >Nos actions</a
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item"
-                  >Le centre de prière</a
-                >
+                  >Centre La Grâce Parle
+                </a>
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
-                  >Aide Humanitaire et Education</a
+                  >Hand Of Hope</a
                 >
               </div>
             </div>
@@ -258,9 +282,7 @@
                 <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
-                <a href="newsletter.html" class="dropdown-item"
-                  >Abonnement a la newsletter</a
-                >
+                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
                 <a href="prayer.html" class="dropdown-item active"
                   >Demander une prière</a
                 >
@@ -268,16 +290,16 @@
               </div>
             </div>
           </div>
-          <div class="d-none d-lg-flex ms-2">
-            <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
-              Faire un don
-              <div
-                class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
-              >
-                <i class="fa fa-arrow-right"></i>
-              </div>
-            </a>
-          </div>
+          <!-- <div class="d-none d-lg-flex ms-2">
+          <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
+            Faire un don
+            <div
+              class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+            >
+              <i class="fa fa-arrow-right"></i>
+            </div>
+          </a>
+        </div> -->
         </div>
       </nav>
     </div>
