--- a/form_temoignage.html
+++ b/form_temoignage.html
@@ -309,7 +309,7 @@
     >
       <div class="container text-center">
         <h3 class="display-4 text-white animated slideInDown mb-4">
-          Contactez-nous
+          Partagez-nous votre témoignage !
         </h3>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
@@ -318,7 +318,7 @@
             </li>
             <!-- <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li> -->
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Contactez-nous
+              Partagez-nous votre témoignage !
             </li>
           </ol>
         </nav>
@@ -336,14 +336,19 @@
             >
               Témoignages
             </div>
-            <h3>
-              Bienvenue dans la page “témoignage” La Grâce Parle Ministries !
-            </h3>
+            <h3>Qu’est-ce que Dieu a fait dans votre vie ?</h3>
             <p class="mb-4">
-              Dans cette section, nous vous proposons d’explorer la
-              Francophonie, et à faire escale dans différents pays, pour
-              découvrir comment Dieu agit et transforme la vie d’hommes et de
-              femmes qui se confient en lui.
+              Éprouvez-vous des sentiments similaires ? Si c'est le cas,
+              n'hésitez pas à partager ce que Dieu a accompli dans votre vie. Il
+              ne s'agit pas nécessairement de réalisations majeures ; parfois,
+              ce sont les événements simples de la vie quotidienne qui
+              illustrent à quel point Dieu nous comprend, nous aime, et nous
+              donnent de nombreuses raisons d'être reconnaissants.
+            </p>
+            <p>
+              Pour procéder, veuillez simplement remplir le formulaire, et un
+              membre de notre équipe vous contactera pour vous guider dans les
+              étapes à suivre.
             </p>
 
             <form id="subscribeForm">
@@ -465,21 +470,24 @@
                 margin: 0;
                 padding: 0;
                 height: 100vh; /* Assurez-vous que le corps occupe la hauteur complète de la fenêtre */
-                background: linear-gradient(
-                  to bottom right,
-                  #00390a 10%,
-                  #f2bb02 11%,
-                  #f2bb02 20%,
-                  #f6e6ca 20%
-                );
+
                 overflow: hidden;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                background-image: url(./img/testimonial-2.jpg);
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
               "
               class="position-relative rounded overflow-hidden h-100"
             >
-              <h1 class="centered-title">Votre Titre</h1>
+              <h2
+                class="centered-title"
+                style="text-transform: uppercase; color: white"
+              >
+                Fortifier la foi de quelqu'un
+              </h2>
             </div>
           </div>
         </div>
