--- a/temoignage.html
+++ b/temoignage.html
@@ -51,10 +51,72 @@
       gtag("config", "G-FSM4EQJ2E1");
     </script>
     <style>
+      .prayer-info-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        margin: 20px;
+      }
+
       body {
-        font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
+        background-color: #f5f5f5;
+      }
+      .prayer-info {
+        background-color: white;
+        border-radius: 5px;
+        padding: 20px;
+        text-align: center;
+        position: relative;
+      }
+      .prayer-info p {
+        z-index: 1;
+        /* background-color: #ffc400; */
+        text-align: justify;
+        margin-top: 50px;
+        padding: 10px;
+      }
+      .prayer-info img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 100%;
+        padding: 15px;
+        object-fit: cover;
+      }
+
+      .prayer-info h2 {
+        color: #333;
+        position: relative;
+        top: 0;
+        left: 0px;
+      }
+
+      .prayer-info i {
+        font-size: 48px;
+        margin-bottom: 10px;
+      }
+      @media (max-width: 767px) {
+        .prayer-info-container {
+          grid-template-columns: 1fr; /* Afficher en colonne */
+          text-align: center;
+        }
+      }
+      /* end */
+      /* end */
+      header {
+        background-color: #f1e3c7;
+        color: white;
+        text-align: center;
+        padding: 20px;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #f5f5f5;
       }
 
       .message-box {
@@ -310,7 +372,7 @@
     >
       <div class="container text-center">
         <h3 class="display-4 text-white animated slideInDown mb-4">
-          Les Témoignages
+          Les Témoignages de Foi
         </h3>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
@@ -319,14 +381,67 @@
             </li>
             <!-- <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li> -->
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Les Témoignages
+              Les Témoignages de Foi
             </li>
           </ol>
         </nav>
       </div>
     </div>
     <!-- Page Header End -->
-
+    <header>
+      <h1>
+        Bienvenue dans la page “Les Témoignages de Foi” de La Grâce Parle !
+      </h1>
+    </header>
+    <p>
+      Dans cette section, nous vous proposons d’explorer la Francophonie, et à
+      faire escale dans différents pays, pour découvrir comment Dieu agit et
+      transforme la vie d’hommes et de femmes qui se confient en lui.
+    </p>
+    <div class="prayer-info-container">
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/testimonial-2.jpg" width="100" height="100" alt=""
+        /></i>
+        <h6>Mousanou zjbjbzjad</h6>
+        <p>
+          Donec mollis hendrerit risus. Etiam iaculis nunc ac metus. Suspendisse
+          faucibus, nunc et pellentesque egestas, lacus ante convallis tellus,
+          vitae iaculis lacus elit id tortor. Maecenas malesuada.
+        </p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/testimonial-3.jpg" width="100" height="100" alt=""
+        /></i>
+        <h6>Mousanou zjbjbzjad</h6>
+        <p>
+          Suspendisse faucibus, nunc et pellentesque egestas, lacus ante
+          convallis tellus, vitae iaculis lacus elit id tortor. Maecenas
+          malesuada.
+        </p>
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/testimonial-1.jpg" width="100" height="100" alt=""
+        /></i>
+        <h6>Mousanou zjbjbzjad</h6>
+        <p>
+          Suspendisse faucibus, nunc et pellentesque egestas, lacus ante
+          convallis tellus, vitae iaculis lacus elit id tortor. Maecenas
+          malesuada.
+        </p>
+      </div>
+    </div>
+    <p style="padding: 15px">
+      Si vous avez vécu une expérience inspirante ou une bénédiction que vous
+      aimeriez partager avec nous, nous vous encourageons à cliquer sur le lien
+      ci-dessous. Votre témoignage peut apporter de l'espoir et de la foi à
+      d'autres. Merci de partager ce que Dieu a fait pour vous.
+    </p>
+    <a style="padding: 15px" href="form_temoignage.html"
+      >Cliquer ici pour partager votre témoignage</a
+    >
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
