--- a/fanfare.html
+++ b/fanfare.html
@@ -332,49 +332,49 @@
           ><img src="./img/violon.png" width="80" height="80" alt=""
         /></i>
         <h2>Violon</h2>
-        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/Clarinet_3D.webp" width="80" height="80" alt=""
+        /></i>
+        <h2>Clarinette</h2>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/drum.webp" width="80" height="80" alt=""
+        /></i>
+        <h2>Tambou</h2>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/trumpet.png" width="80" height="80" alt=""
+        /></i>
+        <h2>Trompette</h2>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
+      </div>
+      <div class="prayer-info">
+        <i class=""
+          ><img src="./img/flute.jpg" width="80" height="80" alt=""
+        /></i>
+        <h2>Flûte Traversière</h2>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
       </div>
       <div class="prayer-info">
         <i class=""
           ><img src="./img/violon.png" width="80" height="80" alt=""
         /></i>
         <h2>Violon</h2>
-        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
       </div>
       <div class="prayer-info">
         <i class=""
           ><img src="./img/violon.png" width="80" height="80" alt=""
         /></i>
         <h2>Violon</h2>
-        <p><strong>Heure :</strong> 12h30 - 15h00</p>
-      </div>
-      <div class="prayer-info">
-        <i class=""
-          ><img src="./img/violon.png" width="80" height="80" alt=""
-        /></i>
-        <h2>Violon</h2>
-        <p><strong>Heure :</strong> 12h30 - 15h00</p>
-      </div>
-      <div class="prayer-info">
-        <i class=""
-          ><img src="./img/violon.png" width="80" height="80" alt=""
-        /></i>
-        <h2>Violon</h2>
-        <p><strong>Heure :</strong> 12h30 - 15h00</p>
-      </div>
-      <div class="prayer-info">
-        <i class=""
-          ><img src="./img/violon.png" width="80" height="80" alt=""
-        /></i>
-        <h2>Violon</h2>
-        <p><strong>Heure :</strong> 12h30 - 15h00</p>
-      </div>
-      <div class="prayer-info">
-        <i class=""
-          ><img src="./img/violon.png" width="80" height="80" alt=""
-        /></i>
-        <h2>Violon</h2>
-        <p><strong>Heure :</strong> 12h30 - 15h00</p>
+        <!-- <p><strong>Heure :</strong> 12h30 - 15h00</p> -->
       </div>
       <div class="prayer-info">
         <i class="fas fa-praying-hands"></i>
