--- a/temoignage.html
+++ b/temoignage.html
@@ -403,7 +403,7 @@
         <i class=""
           ><img src="./img/testimonial-2.jpg" width="100" height="100" alt=""
         /></i>
-        <h6>Mousanou zjbjbzjad</h6>
+        <h6>Test 3</h6>
         <p>
           Donec mollis hendrerit risus. Etiam iaculis nunc ac metus. Suspendisse
           faucibus, nunc et pellentesque egestas, lacus ante convallis tellus,
@@ -414,7 +414,7 @@
         <i class=""
           ><img src="./img/testimonial-3.jpg" width="100" height="100" alt=""
         /></i>
-        <h6>Mousanou zjbjbzjad</h6>
+        <h6>Test 1</h6>
         <p>
           Suspendisse faucibus, nunc et pellentesque egestas, lacus ante
           convallis tellus, vitae iaculis lacus elit id tortor. Maecenas
@@ -425,7 +425,7 @@
         <i class=""
           ><img src="./img/testimonial-1.jpg" width="100" height="100" alt=""
         /></i>
-        <h6>Mousanou zjbjbzjad</h6>
+        <h6>Test 2</h6>
         <p>
           Suspendisse faucibus, nunc et pellentesque egestas, lacus ante
           convallis tellus, vitae iaculis lacus elit id tortor. Maecenas
