--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ button {
   .large-box {
     height: 400px;
     width: 60%;
-    background-image: url("./img/carousel-1.jpg");
+    background-image: url("./img/furniture.png");
     background-size: cover;
   }
   
@@ -451,7 +451,7 @@ button {
                 <div class="row justify-content-center">
                   <div class="col-lg-7 pt-5">
                     <h3 class="display-4 text-white mb-3 animated slideInDown">
-                      Éclairant les âmes perdues, Répandant l'amour de Christ.
+                      Illuminant les âmes égarées, Diffusant l'amour de Jésus-Christ.
                     </h3>
                     <!-- <p class="fs-5 text-white-50 mb-5 animated slideInDown">
                       À travers l'amour du Christ, nous guidons les âmes
