--- a/index.html
+++ b/index.html
@@ -513,17 +513,29 @@ button {
     </div>
     <!-- Carousel End -->
    
+
    <div class="container">
     <div class="box tall-box">
       <div class="flex-container">
         <span class="icon">&#9654;</span>
         <button class="mui-button primary"><a target="_blank" href="https://www.youtube.com/@lagraceparle8000">VIDÉO</a></button>
       </div>
-      <h1 class="title decalage_button"> <br>   <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=bz1RYsXxHmk&t=3s">VOIR LA VIDEO</a> <!-- Nouveau bouton --></h1>
-
-
-      <!-- <h1 class="title">  Le triomphe de la foi !  <br>   <a target="_blank" class="btn btn-secondary" href="https://www.youtube.com/watch?v=bz1RYsXxHmk">VOIR LA VIDÉO</a> </h1> -->
+      <h1 class="title decalage_button"> <br>   <p class="btn btn-secondary" id="openModalBtn" >VOIR LA VIDEO</p> <!-- Nouveau bouton --></h1>
     
+      <!-- <h1 class="title">  Le triomphe de la foi !  <br>   <a target="_blank" class="btn btn-secondary" href="https://www.youtube.com/watch?v=bz1RYsXxHmk">VOIR LA VIDÉO</a> </h1> -->
+      <div id="videoModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <iframe
+            id="youtubeVideo"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/bz1RYsXxHmk"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
 
     </div>
     <div class="box large-box">
