--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@ BOUTIQUE
   
    
       
-      <a href="https://api.whatsapp.com/send?phone=+22953037832" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
         <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 0;left: 0;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
     </a>
     </div>
