--- a/index.html
+++ b/index.html
@@ -173,9 +173,13 @@ button {
   .tall-box {
     height: 400px;
     width: 40%;
-    background-image: url("./img/trimphe.png");
+/* background-color: #334B4F; */
+/* background: linear-gradient(to bottom, #334B4F, transparent); */
+background-image: url("./img/dalum2.jpg");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    object-fit: cover;
   }
   .important {
     height: 400px;
@@ -534,10 +538,12 @@ button {
         <span class="icon">&#9654;</span>
         <button class="mui-button primary"><a target="_blank" href="https://www.youtube.com/@lagraceparle8000">VIDÉO</a></button>
       </div>
-      <h1 class="title decalage_button"> <br>   <p class="btn btn-secondary" id="openModalBtn" >VOIR LA VIDEO</p> <!-- Nouveau bouton --></h1>
-    
-      <!-- <h1 class="title">  Le triomphe de la foi !  <br>   <a target="_blank" class="btn btn-secondary" href="https://www.youtube.com/watch?v=bz1RYsXxHmk">VOIR LA VIDÉO</a> </h1> -->
-   
+     <!-- <div class="triomphe" style="display: flex;margin: auto;justify-content: center;align-items: center;align-content: center;flex-direction: column;margin-top: 5rem;">
+      <h1 style="margin: auto;color: #fff;" class="">Le triomphe de la foi</h1>
+    </div> -->
+
+    <h1 class="title">Le triomphe de la foi   <br>   <p class="btn btn-secondary" id="openModalBtn"  >EN SAVOIR PLUS</p> <!-- Nouveau bouton --></h1>
+
     </div>
     <div class="box large-box">
       <div class="flex-container">
