--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ background-image: url("./img/dalum2.jpg");
       <h1 style="margin: auto;color: #fff;" class="">Le triomphe de la foi</h1>
     </div> -->
 
-    <h1 class="title">Le triomphe de la foi   <br>   <p class="btn btn-secondary" id="openModalBtn"  >EN SAVOIR PLUS</p> <!-- Nouveau bouton --></h1>
+    <h1 class="title">Le triomphe de la foi   <br>   <p class="btn btn-secondary" id="openModalBtn"  >VOIR LA VIDÉO</p> <!-- Nouveau bouton --></h1>
 
     </div>
     <div class="box large-box">
@@ -706,7 +706,7 @@ BOUTIQUE
   <div
   class="container-fluid donate my-5 py-5"
   data-parallax="scroll"
-  data-image-src="img/fond.avif"
+ 
 >
   <div class="container py-5">
     <div class="row g-5 align-items-center">
