--- a/index.html
+++ b/index.html
@@ -733,15 +733,15 @@ BOUTIQUE
           
             <h3>Don En Nature</h3>
             <div id="footerText" style="text-align: center; margin-top: 20px;">
-              <p style='text-align:justify'>Pour faire un don en nature au fondation, veuillez suivre ces étapes :</p>
+              <p style='text-align:center'>Pour faire un don en nature au fondation, veuillez suivre ces étapes :</p>
               <ol>
-                <li style='text-align:justify'>Remplissez le formulaire en choisissant l'option "Don et Soutien".</li>
-                <li style='text-align:justify'>Indiquez dans le message les détails du don en nature que vous souhaitez offrir.</li>
+                <li style='text-align:center'>Remplissez le formulaire en choisissant l'option "Don et Soutien".</li>
+                <li style='text-align:center'>Indiquez dans le message les détails du don en nature que vous souhaitez offrir.</li>
                
-                <li style='text-align:justify'> Nous vous contacterons pour coordonner la collecte du don en nature, en gardant à l'esprit l'amour et le respect qui unissent notre communauté chrétienne.</li>
+                <li style='text-align:center'> Nous vous contacterons pour coordonner la collecte du don en nature, en gardant à l'esprit l'amour et le respect qui unissent notre communauté chrétienne.</li>
                 <li>Consulter le formulaire et suivez les étapes indiquez : <a href='contact.html#subscribeForm' style="color: #FFC300;">Remplissez le formulaire</a></li>
               </ol>
-              <p style='text-align:justify'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</p>
+              <p style='text-align:center'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</p>
             </div>
             <h3>Don En Espèce</h3>
             <div class="col-12">
