--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
         animation: blink 1s infinite;
       }
    /* end */
-  
+   [data-parallax="scroll"] {
+    background: linear-gradient(to bottom, #000000, #334B4F);
+
+}
 
  /* Reset some default button styles */
 button {
@@ -707,6 +710,8 @@ BOUTIQUE
   class="container-fluid donate my-5 py-5"
   data-parallax="scroll"
  
+
+ 
 >
   <div class="container py-5">
     <div class="row g-5 align-items-center">
@@ -738,10 +743,10 @@ BOUTIQUE
                 <li style='text-align:center'>Remplissez le formulaire en choisissant l'option "Don et Soutien".</li>
                 <li style='text-align:center'>Indiquez dans le message les détails du don en nature que vous souhaitez offrir.</li>
                
-                <li style='text-align:center'> Nous vous contacterons pour coordonner la collecte du don en nature, en gardant à l'esprit l'amour et le respect qui unissent notre communauté chrétienne.</li>
+                <li style='text-align:center'> Nous vous contacterons pour coordonner la collecte du don en nature, en gardant à l'esprit l'amour et le respect qui nous unissent.</li>
                 <li>Consulter le formulaire et suivez les étapes indiquez : <a href='contact.html#subscribeForm' style="color: #FFC300;">Remplissez le formulaire</a></li>
               </ol>
-              <p style='text-align:center'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</p>
+              <h6 style='text-align:center'>Que Dieu vous bénisse abondamment pour votre engagement et votre sacrifice. Ensemble, nous faisons la différence dans le monde.</h6>
             </div>
             <h3>Don En Espèce</h3>
             <div class="col-12">
